# ecluses25

./: pyproject.toml  sorted_dic_all.json
docs/: dashboard.html  dashboard.js  index.html
docs/.ipynb_checkpoints/: index-checkpoint.html
