[project]
name = "tofmarathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akaocr>=2.1.6",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "panel>=1.8.2",
    "pytesseract>=0.3.13",
    "tqdm>=4.67.1",
]
